--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -102,6 +102,11 @@ h1,
   font-size: calc(1.375rem + 1.5vw);
 }
 
+h2,
+.h2 {
+  font-size: calc(1.3rem + 0.9vw);
+}
+
 h3,
 .h3 {
   font-size: calc(1.3rem + 0.6vw);
