--- a/css/media-query-1000px.css
+++ b/css/media-query-1000px.css
@@ -22,9 +22,12 @@
     text-align: center;
     margin-top: 1em;
   }
-
+.about-me__introduction {
+  width: 100%;
+}
   #services .container {
     flex-direction: column;
+    
   }
 
   .service {
@@ -49,12 +52,13 @@
 
   #contact .container {
     flex-direction: column;
+    align-items: center;
   }
 
   #contact .picture.right {
     margin-top: 1em;
   }
-
+/*
   .picture.right::before {
     width: 100%;
     height: 30%;
@@ -62,5 +66,5 @@
     bottom: 0;
     right: 0;
     z-index: -1;
-  }
+  }*/
 }
