--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
 .nav ul {
   display: flex;
   list-style-type: none;
-  font-size: 14px;
+  font-size: 16px;
   margin-bottom: 0;
 }
 
@@ -48,7 +48,7 @@ body {
   display: flex;
   background-color: #F6D2B8;
   padding-inline: 100px;
-  padding-block: 100px;
+  padding-block: 50px;
   position: relative;
 }
 
@@ -98,13 +98,9 @@ body {
   font-size: 14px;
 }
 
-#gallery {
-  /*	min-height: 100vh; */
-}
-
 .title {
   text-align: center;
-  padding-block: 2em;
+  padding-top: 2em;
 }
 
 .gallery .nav {
@@ -196,7 +192,6 @@ body {
   justify-content: space-between;
   display: flex;
   padding: 2em 0;
-
 }
 
 .service {
@@ -209,87 +204,12 @@ body {
   flex-direction: column;
   justify-content: space-between;
   z-index: 1;
-}
-/*
-#contact {
-  margin: auto;
-  background-color: #D8D3A8;
-  position: relative;
-  padding-inline: 100px;
-  text-align: center;
-  display:flex;
-  flex-direction: column;
-}
-
-#contact .container {
-  display: flex;
-}
-#contact img {
-  max-width:320px;
-}
-.picture.right::before {
-  content: ' ';
-  background-color: #BEB45A;
-  width: 50%;
-  height: auto;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-}
-
-.form-container {
-  flex: 2;
-  display: flex;
-  flex-direction: column;
   align-items: center;
 }
-
-form {
-  display: flex;
-  flex-direction: column;
-  width: 70%;
-  align-items: flex-start;
+.service {
+  text-align: center;
 }
 
-form input {
-  width: 100%;
-  background-color: transparent;
-  border: #868080 solid 1px;
-  height: 2.5em;
-  margin-bottom: 20px;
-}
-
-form textarea {
-  width: 100%;
-  background-color: transparent;
-  border: #868080 solid 1px;
-  height: 5em;
-  line-height: 2.5em;
-  font-size: 1.2em;
-  margin-bottom: 20px;
-  resize: none;
-}
-
-input[type="submit"] {
-  background-color: #BEB45A;
-  padding: .5em 1em
-}
-
-.divInfos {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-block: 50px;
-  box-sizing: border-box;
-}
-
-.colInfos {
-  width: 50%;
-  padding: 10px;
-  z-index: 1;
-}
-*/
 #contact {
   margin: auto;
   background-color: #D8D3A8;
@@ -304,6 +224,7 @@ input[type="submit"] {
 #contact h3,p {
   display: flex;
   justify-content: center;
+  padding : 20px;
 }
 .picture.right::before {
   content: ' ';
