--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,3 +304,139 @@ input[type="submit"] {
   padding: 10px;
   z-index: 1;
 }
+@media all and (max-width: 1180px) {
+  .picture {
+    flex: 1;
+  }
+
+  #about,
+  #contact .container {
+    align-items: center;
+  }
+
+  .about-me__title {
+    margin-top: 0;
+    margin-bottom: 1em;
+  }
+
+  .about-me__introduction {
+    width: 100%;
+  }
+
+  #about-me h6,
+  #about-me p {
+    width: 100%;
+  }
+}
+
+#contact .picture.right {
+  margin-top: 1em;
+}
+@media all and (max-width: 1000px) {
+  #about {
+    flex-direction: column;
+
+  }
+
+  .picture {
+    flex: 1;
+  }
+
+  .picture.left::before {
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    bottom: auto;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+
+  .about-me__title {
+    text-align: center;
+    margin-top: 1em;
+  }
+
+  .about-me__introduction {
+    width: 100%;
+  }
+
+  #services .container {
+    flex-direction: column;
+
+  }
+
+  .service {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    margin: 2em 0
+  }
+
+  .service__description {
+    margin-bottom: 1em;
+  }
+
+  #services .container::before {
+    width: 30%;
+    height: 100%;
+    bottom: 0;
+    right: 0;
+    left: auto;
+    z-index: 0;
+  }
+
+  #contact .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #contact .picture.right {
+    margin-top: 1em;
+  }
+}
+@media all and (max-width: 650px) {
+  .top-header {
+    flex-direction: column;
+    padding-inline: 0;
+  }
+
+  .top-header .nav,
+  .top-header .nav ul {
+    width: 100%;
+    padding: 0 0 0 0;
+  }
+
+  .top-header .nav li {
+    flex: 1;
+    padding-block: 1em;
+    text-align: center;
+  }
+
+  .picture.left::before,
+  .picture.right::before {
+    height: 150px;
+  }
+
+  #services .container {
+    align-items: center;
+  }
+
+  #services .divInfos {
+    align-items: center;
+  }
+
+  .service {
+    max-width: 90%;
+  }
+
+  #about,
+  #contact {
+    padding-inline: 2em;
+    padding-block: 2em;
+  }
+
+  form {
+    width: 100%;
+  }
+}
